# TinyAI

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_ROADMAP.md  BUILD_STATUS.md  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_INVENTORY.md  DOCUMENTATION_REORGANIZATION.md  FIRST_STEPS.md  FUTURE_UPDATES.md  HYBRID_CAPABILITIES.md  HYBRID_ROADMAP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LICENSE  NEXT_STEPS.md  PROJECT_PROGRESS.md  PROJECT_STATUS.md  README.md  README_HYBRID.md  TECHNICAL_DOCUMENTATION.md  TESTING_IMPLEMENTATION.md  TEST_PLAN.md  VISUAL_STUDIO_GUIDE.md  VSCODE_TERMINAL_GUIDE.md  cleanup_build.bat  cleanup_build.ps1  main.c  run_priority_tests.bat  run_priority_tests.ps1  run_priority_tests.sh  test_vs_setup.bat
core/: config.c  config.h  io.c  io.h  logging.c  logging.h  memory.c  memory.h  picol.c  picol.h  picol_fixes.c  runtime.c  runtime.h
core/mcp/: mcp_client.c  mcp_client.h
data/: model_config.json  sample_text.txt  tiny_vocab.tok
docs/: index.md
docs/api/: api_reference.md  core.md  forward_scheduler.md  memory.md  mmap_loader.md  models.md  optimization.md  performance.md
docs/examples/: chatbot.md  document_processor.md  media_tagging.md  memory_efficiency.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: architecture.md  debugging.md  deployment.md  getting_started.md  memory.md  memory_optimization.md  performance.md
examples/: CMakeLists.txt
examples/audio/: CMakeLists.txt
examples/audio/keyword_spotting/: CMakeLists.txt  README.md  kws.c  kws.h  main.c
examples/audio/speech_recognition/: CMakeLists.txt  README.md  asr.c  asr.h  main.c
examples/audio/voice_detection/: CMakeLists.txt  README.md  main.c  vad.c  vad.h
examples/chatbot/: CMakeLists.txt  README.md  chat_model.c  chat_model.h  main.c
examples/document_processor/: CMakeLists.txt  README.md  document_processor.c  document_processor.h  main.c
examples/image_recognition/: CMakeLists.txt  README.md  image_classifier.c  image_classifier.h  main.c
examples/media_tagging/: CMakeLists.txt  README.md  main.c  media_tagger.c  media_tagger.h
examples/multimodal/: CMakeLists.txt
examples/multimodal/image_captioning/: CMakeLists.txt  README.md  image_caption_model.c  image_caption_model.h  image_captioner.c  image_captioner.h  main.c
examples/multimodal/visual_qa/: CMakeLists.txt  README.md  main.c  visual_qa.c  visual_qa.h  visual_qa_model.c  visual_qa_model.h
interface/: cli.c  cli.h  main.c  web_server.c  web_server.h
models/audio/: audio_features.c  audio_features.h  audio_model.c  audio_model.h  audio_utils.c  audio_utils.h
models/image/: forward_pass.c  image_model.c  image_model.h  image_model_internal.h  image_test.c  image_utils.c  image_utils.h  stb_image_loader.c
models/multimodal/: README.md  fusion.c  fusion.h  multimodal_model.c  multimodal_model.h
models/pretrained/: README.md
models/text/: attention.c  attention.h  generate.c  generate.h  hybrid_generate.c  hybrid_generate.h  tokenizer.c  tokenizer.h
samples/: sample_text.txt
tests/: test_attention.c  test_audio_model.c  test_cache_opt.c  test_depthwise_conv.c  test_generate.c  test_hybrid.c  test_image_model.c  test_io.c  test_large_model_memory.c  test_logging.c  test_main.c  test_memory.c  test_memory_analysis.c  test_memory_efficient_tensor.c  test_memory_pool.c  test_mixed_precision.c  test_mmap_loader.c  test_multimodal.c  test_oom_handling.c  test_performance_impact.c  test_progressive_loading.c  test_simd_acceleration.c  test_simd_benchmark.c  test_simd_ops.c  test_sparse_ops.c  test_tokenizer.c  test_tokenizer_real_data.c
tools/: test_pipeline.bat  test_pipeline.sh
tools/benchmark/: benchmark_utils.c  benchmark_utils.h
tools/benchmark/memory/: memory_benchmark.c  memory_profiler.c
tools/benchmark/performance/: performance_benchmark.c
tools/benchmark/text/: text_model_benchmark.c
tools/conversion/: __init__.py  config.py  convert_model.py
tools/conversion/onnx/: __init__.py  onnx_converter.py
tools/conversion/pytorch/: __init__.py  pytorch_converter.py
tools/conversion/tensorflow/: __init__.py  tensorflow_converter.py
tools/cross_platform_testing/: __init__.py  run_tests.py
utils/: advanced_memory_pool.c  advanced_memory_pool.h  benchmark.c  benchmark.h  cache_opt.c  cache_opt.h  forward_scheduler.c  forward_scheduler.h  layer_scheduler.c  layer_scheduler.h  memory_analysis.c  memory_analysis.h  memory_efficient_tensor.c  memory_efficient_tensor.h  memory_optimizer.c  memory_optimizer.h  memory_pool.c  memory_pool.h  memory_profiler.h  mmap_loader.c  mmap_loader.h  model_loader.c  model_loader.h  performance_impact.c  performance_impact.h  progressive_loader.c  progressive_loader.h  progressive_loader_test.c  prune.c  prune.h  quant_aware_training.c  quant_aware_training.h  quantize.c  quantize.h  quantize_mixed.c  quantize_mixed.h  simd_benchmark.c  simd_benchmark.h  simd_ops.c  simd_ops.h  (+6 more)
web_ui/: index.html  script.js  style.css
